@@ -46,6 +46,9 @@ IN DEVELOPMENT
     * Switch the ``bzr init-repo`` default from --no-trees to --trees. 
       (Wouter van Heyst, #53483)
 
+
+    * Take smtp_server from user config into account.
+      (vila, #92195)
  
 bzr 0.15rc1  2007-03-07
 
